--- a/springboot-api/src/main/resources/application.properties
+++ b/springboot-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/tutorial_db?useSSL=false&serverTimezone=America/Lima
+spring.datasource.url=jdbc:mysql://localhost:3306/dayer_db?useSSL=false&serverTimezone=America/Lima
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
